--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,10 +14,12 @@
   <!-- include source files here... -->
   <script src="src/HelloWorld.js"></script>
   <script src="src/functions.js"></script>
+  <script src="src/Person.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/HelloWorldSpec.js"></script>
   <script src="spec/functionsSpec.js"></script>
+  <script src="spec/PersonSpec.js"></script>
 
 </head>
 
