add some fun things

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,11 +15,13 @@
   <script src="src/HelloWorld.js"></script>
   <script src="src/functions.js"></script>
   <script src="src/Person.js"></script>
+  <script src="src/object.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/HelloWorldSpec.js"></script>
   <script src="spec/functionsSpec.js"></script>
   <script src="spec/PersonSpec.js"></script>
+  <script src="spec/objectSpec.js"></script>
 
 </head>
 
